--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">    
+<html lang="en"> 
+<link rel="stylesheet" href="theme.css">
+<script src="script.js"></script>
 <title>Site Maintenance</title>
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 <style>
