--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en"> 
-<link rel="stylesheet" href="theme.css">
+<link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
 <title>Site Maintenance</title>
-<div class="xmasTree"></div>
 
-	<button class="SetUpTree">The site under construction. Click here to reveal Our Xmas Tree</button>
-
-	<p class="merryXmasGreet">
-		<span>May This Christmas Bring </span>
-		<span>you Much Happiness </span>
-		<span>For All Days Of The New Year</span>
-		<span><a href="viralcage.com" target="_blank"></a>YO4C Team</span>
-	</p>
+	<div class="window">
+		<div class="santa">
+			<div class="head">
+				<div class="face">
+					<div class="redhat">
+						<div class="whitepart"></div>
+						<div class="redpart"></div>
+						<div class="hatball"></div>
+					</div>
+					<div class="eyes"></div>
+					<div class="beard">
+						<div class="nouse"></div>
+						<div class="mouth"></div>
+					</div>
+				</div>
+				<div class="ears"></div>
+			</div>
+			<div class="body"></div>
+		</div>
+	</div>
+	<div class="message">
+		<h1>Merry Christmas!</h1>
+		<h2 class="text">Website Under Construction <a href="https://viralcage.com" target="_blank">ViralCage</a></h2>
+	</div>
