--- a/index.html
+++ b/index.html
@@ -26,5 +26,5 @@
 	</div>
 	<div class="message">
 		<h1>Merry Christmas!</h1>
-		<h2 class="text">Website Under Construction <a href="https://viralcage.com" target="_blank">ViralCage</a></h2>
+		<h2 class="text">We're coming soon!<a href="https://viralcage.com" target="_blank">ViralCage</a></h2>
 	</div>
