--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
-<title>Site Maintenance</title>
+<title>We're coming soon!</title>
 
 	<div class="window">
 		<div class="santa">
@@ -26,5 +26,5 @@
 	</div>
 	<div class="message">
 		<h1>Merry Christmas!</h1>
-		<h2 class="text">We're coming soon!<a href="https://viralcage.com" target="_blank">ViralCage</a></h2>
+		<h2 class="text">We're coming soon!  <a href = "mailto: info@yo4c.com">Contact Us </a></a></h2>
 	</div>
