--- a/index.html
+++ b/index.html
@@ -2,29 +2,93 @@
 <html lang="en"> 
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
-<title>We're coming soon!</title>
+<title>YO4C Network</title>
 
-	<div class="window">
-		<div class="santa">
-			<div class="head">
-				<div class="face">
-					<div class="redhat">
-						<div class="whitepart"></div>
-						<div class="redpart"></div>
-						<div class="hatball"></div>
-					</div>
-					<div class="eyes"></div>
-					<div class="beard">
-						<div class="nouse"></div>
-						<div class="mouth"></div>
-					</div>
-				</div>
-				<div class="ears"></div>
-			</div>
-			<div class="body"></div>
-		</div>
-	</div>
-	<div class="message">
-		<h1>Merry Christmas!</h1>
-		<h2 class="text">We're coming soon!  <a href = "mailto: info@yo4c.com">Contact Us </a></a></h2>
-	</div>
+	<<section class="countdownSection">
+  <div class="decorations">
+    <div class="decoration" data-pos="bottom left"></div>
+    <div class="decoration" data-pos="top right"></div>
+    <div class="snow"></div>
+    <div class="santaWrapper">
+      <div class="santa">
+        <div class="hat">
+          <div></div>
+          <div></div>
+        </div>
+        <div class="face">
+          <div class="eyeBrows left"></div>
+          <div class="eyeBrows right"></div>
+          <div class="eye left"></div>
+          <div class="eye right"></div>
+          <div class="nose"></div>
+          <div class="cheek left"></div>
+          <div class="cheek right"></div>
+          <div class="beard">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+        <div class="body">
+          <div class="sweater"></div>
+          <div class="hand left">
+            <div class="inner"></div>
+          </div>
+          <div class="hand right"></div>
+        </div>
+      </div>
+      <div class="rope"></div>
+      <div class="rope back"></div>
+      <div class="sled"></div>
+      <div class="reindeer">
+        <div class="face">
+          <div class="ear"></div>
+          <div class="horn right"></div>
+          <div class="horn left"></div>
+        </div>
+        <div class="body">
+          <div class="foot front">
+            <div class="inner">
+              <div class="extension"></div>
+            </div>
+          </div>
+          <div class="foot back">
+            <div class="inner">
+              <div class="extension"></div>
+            </div>
+          </div>
+          <div class="tail"></div>
+        </div>
+      </div>
+      <div class="reindeer second">
+        <div class="rope"></div>
+        <div class="face">
+          <div class="ear"></div>
+          <div class="horn right"></div>
+          <div class="horn left"></div>
+        </div>
+        <div class="body">
+          <div class="foot front">
+            <div class="inner">
+              <div class="extension"></div>
+            </div>
+          </div>
+          <div class="foot back">
+            <div class="inner">
+              <div class="extension"></div>
+            </div>
+          </div>
+          <div class="tail"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="counterWrapper">
+      <p>We have only</p>
+      <div class="countdown"></div>
+      <p>for christmas</p>
+      We're coming soon!  <a href = "mailto: info@yo4c.com">Contact Us 
+    </div>
+  </div>
+</section>
