--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"> 
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.scss">
 <script src="script.js"></script>
 <title>YO4C Network</title>
 
