--- a/index.html
+++ b/index.html
@@ -3,92 +3,48 @@
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
 <title>YO4C Network</title>
+<div class="header">
+	<h1>Christmas Countdown</h1>
+	<div>2021</div>
+</div>
 
-	<<section class="countdownSection">
-  <div class="decorations">
-    <div class="decoration" data-pos="bottom left"></div>
-    <div class="decoration" data-pos="top right"></div>
-    <div class="snow"></div>
-    <div class="santaWrapper">
-      <div class="santa">
-        <div class="hat">
-          <div></div>
-          <div></div>
-        </div>
-        <div class="face">
-          <div class="eyeBrows left"></div>
-          <div class="eyeBrows right"></div>
-          <div class="eye left"></div>
-          <div class="eye right"></div>
-          <div class="nose"></div>
-          <div class="cheek left"></div>
-          <div class="cheek right"></div>
-          <div class="beard">
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
-        </div>
-        <div class="body">
-          <div class="sweater"></div>
-          <div class="hand left">
-            <div class="inner"></div>
-          </div>
-          <div class="hand right"></div>
-        </div>
-      </div>
-      <div class="rope"></div>
-      <div class="rope back"></div>
-      <div class="sled"></div>
-      <div class="reindeer">
-        <div class="face">
-          <div class="ear"></div>
-          <div class="horn right"></div>
-          <div class="horn left"></div>
-        </div>
-        <div class="body">
-          <div class="foot front">
-            <div class="inner">
-              <div class="extension"></div>
-            </div>
-          </div>
-          <div class="foot back">
-            <div class="inner">
-              <div class="extension"></div>
-            </div>
-          </div>
-          <div class="tail"></div>
-        </div>
-      </div>
-      <div class="reindeer second">
-        <div class="rope"></div>
-        <div class="face">
-          <div class="ear"></div>
-          <div class="horn right"></div>
-          <div class="horn left"></div>
-        </div>
-        <div class="body">
-          <div class="foot front">
-            <div class="inner">
-              <div class="extension"></div>
-            </div>
-          </div>
-          <div class="foot back">
-            <div class="inner">
-              <div class="extension"></div>
-            </div>
-          </div>
-          <div class="tail"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="container">
-    <div class="counterWrapper">
-      <p>We have only</p>
-      <div class="countdown"></div>
-      <p>for christmas</p>
-      We're coming soon!  <a href = "mailto: info@yo4c.com">Contact Us 
-    </div>
-  </div>
-</section>
+<div id="countdown-box" class="cdb">
+	<div class="cdi">
+		<span id="d">0</span>
+		<div id="d-lbl" class="cdi-lbl">DAYS</div>
+	</div>
+	<div class="cdi">
+		<span id="h">0</span>
+		<div id="h-lbl" class="cdi-lbl">HOURS</div>
+	</div>
+	<div id="m-break"></div>
+	<div class="cdi">
+		<span id="m">0</span>
+		<div id="m-lbl" class="cdi-lbl">MINUTES</div>
+	</div>
+	<div class="cdi">
+		<span id="s">0</span>
+		<div id="s-lbl" class="cdi-lbl">SECONDS</div>
+	</div>
+</div>
+
+<div id="controls">
+	<span id="play-toggle" class="material-icons">volume_off</span><!-- volume_up-->
+	<span id="queue-toggle" class="material-icons">arrow_circle_up</span>
+</div>
+
+<div id="music-list">
+	<ul>
+		<li>christmas-party.mp3</li>
+		<li>christmas-rock.mp3</li>
+		<li class="active">happy-new-year.mp3</li>
+		<li>jingle-bells.mp3</li>
+		<li>snowflake.mp3</li>
+		<li>upbeat-countdown.mp3</li>
+	</ul>
+</div>
+
+<canvas id="canvas"></canvas>
+<div id="world"></div>
+
+<audio id="audio" controls="false" autoplay type="audio/mp3" src="https://raw.githubusercontent.com/ZaneWesley/image-dropbox/main/christmas-audio/upbeat-countdown.mp3" style="display: none;"></audio>
