--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-
+<!DOCTYPE html>
+<html lang="en"> 
+<link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
+<title>YO4C Network</title>
