--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<section class="showcase">
 			<div class="video-container">
-				<video src="https://download1073.mediafire.com/dq46gv0ks4gg/wixo6tatw26tyq2/MVI_7515.MOV" autoplay muted loop></video>
+				<video src="https://download2342.mediafire.com/48c6dnuwdlug/qeh58akzcpper1a/Footage.mov" autoplay muted loop></video>
 			</div>
 			<div class="content">
 				<h1><b>YO4C Network</b></h1>
