--- a/index.html
+++ b/index.html
@@ -7,30 +7,180 @@
 
   
   
-
-	<section class="showcase">
-			<div class="video-container">
-				<video src="https://download2342.mediafire.com/48c6dnuwdlug/qeh58akzcpper1a/Footage.mov" autoplay muted loop></video>
+<div class= text
+	 <h1><b>YO4C Network</b></h1>
+<input type="checkbox" id="toggle" >
+<label for="toggle">
+	<div class="floor"></div>
+	
+	<div class="🐴 animate">
+		<div class="front-leg right">
+			<div class="shoulder">
+				<div class="upper">
+					<div class="knee">
+						<div class="lower">
+							<div class="ankle">
+								<div class="foot">
+									<div class="hoof"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="content">
-				<h1><b>YO4C Network</b></h1>
-				<h3>Powered by Viral Cage</h3>
-				<a href="#about" class="btn">About Us</a>
+		</div>
+		<div class="back-leg right">
+			<div class="top">
+				<div class="thigh">
+					<div class="lower-leg">
+						<div class="foot">
+							<div class="hoof"></div>
+						</div>
+					</div>
+				</div>
 			</div>
-		</section>
-
-		<section id="about">
-			<h1>About</h1>
-			<p>
-				We are still working on the project and will be back with new for more info you could contact us at info@yo4c.com
-			</p>
-
-			<h2>Follow Me On Social Media</h2>
-
-			<div class="social">
-			<a href="" target="_blank"><i class="fab fa-twitter fa-3x"></i></a>
-				<a href="" target="_blank"><i class="fab fa-facebook fa-3x"></i></a>
-				<a href="" target="_blank"><i class="fab fa-github fa-3x"></i></a>
-				<a href="" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+		</div>
+		<div class="tail">
+			<div class="nub">
+				<div class="section">
+				<div class="section">
+				<div class="section">
+				<div class="section">
+				<div class="section">
+				<div class="section last">
+				</div>
+				</div>
+				</div>
+				</div>
+				</div>
+				</div>
 			</div>
-		</section>
+		</div>
+		<div class="body">
+			<div class="section">
+			<div class="section">
+			<div class="section">
+			<div class="section">
+			<div class="section last">
+			</div>
+			</div>
+			</div>
+			</div>
+			</div>
+			<div class="back-side"></div>
+		</div>
+		
+		<div class="neck">
+			<div class="under"></div>
+			<div class="front"></div>
+			<div class="base"></div>
+			<div class="top"></div>
+			<div class="shoulder"></div>
+		</div>
+		<div class="front-leg left">
+			<div class="shoulder">
+				<div class="upper">
+					<div class="knee">
+						<div class="lower">
+							<div class="ankle">
+								<div class="foot">
+									<div class="hoof"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<div class="back-leg left">
+			<div class="top">
+				<div class="thigh">
+					<div class="lower-leg">
+						<div class="foot">
+							<div class="hoof"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<div class="head">
+			<div class="skull"></div>
+			<div class="nose"></div>
+			<div class="face"></div>
+			<div class="lip"></div>
+			<div class="jaw"></div>
+			<div class="chin"></div>
+			<div class="ear"></div>
+			<div class="eye"></div>
+		</div>
+	</div>	
+	
+	<div class="dust front">
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+	</div>
+	<div class="dust back">
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+		<div class="particle"></div>
+	</div>
+	
+	
+</label>
