--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   
 <div class= text
-	 <h1><b>YO4C Network</b></h1>
+	 <h1>YO4C Network</h1>
 <input type="checkbox" id="toggle" >
 <label for="toggle">
 	<div class="floor"></div>
