--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <label for="toggle">
 	<div class="floor"></div>
 	
-	<div class="🐴 animate"><div style= "color:white">YO4C Network</div>
+	<div class="🐴 animate"><div style= "color:white">Yo4c Network</div>
 		<div class="front-leg right">
 			<div class="shoulder">
 				<div class="upper">
